# My-Vulkan-Learning-Project

./: .gitignore  CMakeLists.txt  VulkanProject.sln
AssetManager/: Application.cpp  Application.h  AssetManager.vcxproj  AssetManager.vcxproj.filters  ButtonWidget.cpp  ButtonWidget.h  Main.cpp  Window.cpp  Window.h  WindowWidget.cpp  WindowWidget.h
VulkanProject/: CMakeLists.txt  Default.frag  Default.vert  Engine.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  VertexBuffer.cpp  VertexStruct.h  VulkanProject.vcxproj  VulkanProject.vcxproj.filters  Window.cpp
VulkanProject/Assets/: starterCube.fbx
VulkanProject/Compiled/: compile shaders.bat  defaultFrag.spv  defaultVert.spv
VulkanProject/Headers/: Camera.h  EngineUtilities.h  Renderer.h  StaticMesh.h  Texture.h  VertexBuffer.h  Window.h
VulkanProject/Includes/assimp/: revision.h
VulkanProject/Libraries/: glfw3.lib
VulkanProject/Src/: Engine.cpp  EngineUtilities.cpp  Main.cpp  Renderer.cpp  StaticMesh.cpp  Window.cpp
